--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -67,10 +67,10 @@
                 <td mat-cell *matCellDef="let element"> {{element.DeviceId}} </td>
               </ng-container>
             <!-- Status Column -->
-            <ng-container matColumnDef="IsActive">
+            <!-- <ng-container matColumnDef="IsActive">
               <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
               <td mat-cell *matCellDef="let element "> {{element.IsActive}} </td>
-            </ng-container>
+            </ng-container> -->
             
             <!-- Action ID Column -->
                 <ng-container matColumnDef="action">
