--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -5,22 +5,30 @@
         <div class="col-lg-3">          
           <mat-form-field >
               <mat-label>Choose a date</mat-label>
-              <input matInput [matDatepicker]="picker" [(ngModel)]="datepicker" name="datepicker" (ngModelChange)="changeDate()">
+              <input matInput [matDatepicker]="picker" [(ngModel)]="transHistoryFilter.StartDate" name="StartDate" (ngModelChange)="changeDate()">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
+        <!-- <div class="col-lg-3"> 
+            <mat-form-field >
+              <mat-label>Choose a date</mat-label>
+              <input matInput [matDatepicker]="picker" [(ngModel)]="transHistoryFilter.StartDate" name="EndDate" (ngModelChange)="changeDate()">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+        </div> -->
         <div class="col-lg-3 zero-padding-right"> 
           <div class="navbar-collapse justify-content-end" id="navigation">
             <form class="navbar-form">
                 <mat-form-field>
-                  <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
+                  <input matInput (keyup)="applyFilterOne($event.target.value)" [(ngModel)]="transHistoryFilter.Search" placeholder="Search"/>
                 </mat-form-field>
             </form>        
           </div>
         </div>
         <div class="col-md-2 float-right" >
-          <button mat-raised-button class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
+          <button mat-raised-button matTooltip=" Click to import Excel" class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
         </div>
     </div>       
     <div class="row" style="background-color: #fbfbfb">
@@ -95,7 +103,7 @@
           <ng-container matColumnDef="action">
             <th class="tab-head" mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
-              <button mat-icon-button color="blue" [routerLink]="['/imagestatus',element.Id]">
+              <button mat-icon-button matTooltip=" Click to View the details of the user" color="blue" [routerLink]="['/imagestatus',element.Id]">
                   <mat-icon>visibility</mat-icon>
               </button></td>
           </ng-container>
