--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,9 @@ button
 tr.mat-header-row {
     height: 46px !important;
 }
-
+.material-icons{
+    font-size: 20px !important;
+}
 button, .pointer{
     cursor: pointer !important;
 }
