--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <a href class="simple-text">
+    <a href="javascript:void(0)" class="simple-text">
         <div class="logo-img">
           <img src="/assets/img/syn.png"/>  
         </div>
@@ -22,7 +22,7 @@
     <ul class="nav navbar-nav nav-mobile-menu">
         
         
-        <li class="nav-item">
+        <li class="nav-item" >
             <a class="nav-link" href="javascript:void(0)">
                 <i class="material-icons">person</i>
                 <p>
