--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -56,5 +56,5 @@ mat-label {
 .error{
   font-size: 14px;
   font-weight: bold;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'poppins';
 }
