--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -1,1 +1,7 @@
-<p>bills works!</p>
+<div class="main-content page-container">
+    <div class="container-fluid">
+      <h1><b>Under Construction</b></h1>
+    </div>
+</div>
+  
+
