--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -17,8 +17,8 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <!-- <div class="row" *ngIf ="dataSourceOne[0].Status != 'Stopped'" > -->
-      <table mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
+    <!-- <div class="row" *ngIf ="dataSourceOne[0].Status !== 'Stopped'" > -->
+      <table *ngIf="!isLoading" mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
         <ng-container matColumnDef="sno">
           <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
           <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}}  </td>
@@ -35,10 +35,14 @@
           <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let element">{{ element.Status}}</td>
         </ng-container>
+        
        
         <tr mat-header-row *matHeaderRowDef="displayedColumnsOne"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsOne"></tr>
       </table>
+      <div style="width:450px;margin:8% auto;" *ngIf="isLoading">
+        <img src="../../assets//img//temp-loader.gif" alt="Please wait..." />
+    </div>
     </div>
     <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [showFirstLastButtons]="true"></mat-paginator>
   </div>
