--- a/src/app/user-List/user-List.component.html
+++ b/src/app/user-List/user-List.component.html
@@ -76,7 +76,7 @@
                 <ng-container matColumnDef="action">
                   <th class="tab-head" mat-header-cell *matHeaderCellDef style="padding-left: 35px;">Action</th>
                   <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to View the User Details" color="blue" [routerLink]="['/usercreation',element.Id,true]">
+                    <button mat-icon-button  matTooltip="Click to View the User Details" color="blue" [routerLink]="['/viewpage',element.Id,true]"  >
                         <mat-icon>visibility</mat-icon>
                     </button>
                     <button mat-icon-button matTooltip="Click to Edit the User Details"  color="blue" [routerLink]="['/usercreation',element.Id,false]">
