--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-9"></div>
     <div class="col-md-3 pull-right" >
-      <button  mat-raised-button  matTooltip="Click here to Save the NewUser" type="button" class="btn btn-action btn-create pull-right" (click)="userSave()" [hidden]="isVisible">{{label}}</button>
+    <button  mat-raised-button  matTooltip="Click here to Update User"  type="button" class="btn btn-action btn-create pull-right" (click)="userSave()" [hidden]="isVisible">{{label}}</button>
       <button  mat-raised-button  matTooltip="Click here to go back to User Management Page"  type="button" class="btn btn-action back-btn pull-right" color="warn" [routerLink]="['/userlist']">Back</button>
       <div class="clearfix"></div>
       </div>
@@ -37,9 +37,20 @@
                   </div>
                     
                     <div class="col-md-3">
-                        <mat-form-field class="example-full-width">
+                      <div class= "example-container" >
+                        <!-- <mat-form-field class="example-full-width"> -->
+                            <!-- <input matInput placeholder="Password" type="password" formControlName="Password" readonly>  -->
+                            <mat-form-field class="example-full-width" >
+                                <mat-label>password</mat-label>
+                                <input matInput [type]="hide ? 'password' : 'text'">
+                                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                                </button>
+                              </mat-form-field>     
+                    </div>
+                        <!-- <mat-form-field class="example-full-width">
                           <input matInput placeholder="Password" type="password" formControlName="Password">
-                        </mat-form-field>
+                        </mat-form-field> -->
                     </div>
                 </div>
                 <div class="row" *ngIf="userForm.controls.RoleId.value == 5">
@@ -50,7 +61,9 @@
                     </div>
                     <div class="col-md-6">
                       <mat-form-field class="example-full-width">
-                        <input matInput placeholder="AutoSyncTime" matTooltip=" Auto Sync will start in the given time" type="time" formControlName="AutoSyncTime"  >
+                        <!-- <input matInput placeholder="AutoSyncTime" matTooltip=" Auto Sync will start in the given time" type="time" formControlName="AutoSyncTime"  > -->
+                        <input  [ngxTimepicker]="picker" [format]="24" matInput placeholder="AutoSyncTime" formControlName="AutoSyncTime" matTooltip=" Auto Sync will start in the given time" readonly>
+                        <ngx-material-timepicker   #picker></ngx-material-timepicker>
                       </mat-form-field>
                 </div>
                 </div>
