--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -55,7 +55,6 @@
 .dropdown ul{
   padding: 2px!important;
 }
-.navbar-wrapper{
-  padding-right: 150%;
-}           
-              
+/* .navbar-wrapper{
+  padding-right: 100%;
+} */
