--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
             </ul> -->
-            <div class="dropdown" style="margin-right: 12px;"> <i class="material-icons" data-toggle="dropdown">person</i>
+            <div class="dropdown"> <i class="material-icons" data-toggle="dropdown">person</i>
                 <ul class="dropdown-menu dropdown-menu-right pointer">
                   <li><a routerLink="login"> 
                       <i class="material-icons">power_settings_new</i>Logout
