--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -92,7 +92,7 @@
         <!-- Photo Column -->
         <ng-container matColumnDef="Photo">
           <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Photo</th>
-          <td mat-cell *matCellDef="let element" > {{(element.Photos != null)  ? element.Photos.Total + "/" + element.Photos.Completed : 0}}</td>
+          <td mat-cell *matCellDef="let element" > {{(element.Photos != null)  ? element.Photos.Completed + "/" + element.Photos.Total : 0}}</td>
         </ng-container> 
 
         <!-- Excel Column -->
