--- a/src/app/imagestatus/imagestatus.component.css
+++ b/src/app/imagestatus/imagestatus.component.css
@@ -15,3 +15,11 @@
 }
 .card {margin-top: 10px !important;}
 .count{padding-top: 18px;}
+
+/* .btn btn-action back-btn pull-right{
+  padding-right:25px;
+} */
+
+.m-21-p{
+  margin: 21%;
+}
