--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -55,7 +55,7 @@
 .dropdown ul{
   padding: 2px!important;
 }
-.navbar-wrapper{
+/* .navbar-wrapper{
   padding-right: 150%;
-}           
+}            */
               
