--- a/src/app/imagestatus/imagestatus.component.html
+++ b/src/app/imagestatus/imagestatus.component.html
@@ -1,7 +1,7 @@
 <div class="main-content page-container">
   <div class="container-fluid">
     <div class="row list-filter">
-      <div class="col-md-3">  
+      <div class="col-md-2.5">  
         <mat-form-field>
           <input matInput (keyup)="applyFilterOne($event.target.value)" placeholder="Search"/>
         </mat-form-field>
@@ -12,13 +12,13 @@
         <div class="col-md-2 float-right"> <b>Bills : </b>{{billCount}}</div>
         <div class="col-md-2 float-right"> <b>Reads :</b> {{readCount}}</div>
       </div>
-      <div class="col-md-1 pull-right" >
+      <div class="col-md-1.5 float-right" >
         <button  mat-raised-button type="button" matTooltip=" Click to TransferStatus" class="btn btn-action back-btn pull-right" color="warn" [routerLink]="['/transferstatus']">Back</button>
         <div class="clearfix"></div>
       </div>
     </div>
-    <!-- <div class="row" *ngIf ="dataSourceOne[0].Status !== 'Stopped'" > -->
-      <table *ngIf="!isLoading" mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
+    <div class="m-21-p" *ngIf ="isStopped" >{{reason}}</div>
+      <table *ngIf="!isLoading" [hidden] ="isStopped" mat-table matSort [dataSource]="dataSourceOne"cx #TableOneSort="matSort" class="mat-elevation-z8 col-md-12" >
         <ng-container matColumnDef="sno">
           <th class="tab-head" mat-header-cell *matHeaderCellDef>S.No</th>
           <td mat-cell *matCellDef="let i = index"> {{i + 1 +(TableOnePaginator.pageIndex * TableOnePaginator.pageSize)}}  </td>
@@ -44,5 +44,5 @@
         <img src="../../assets//img//temp-loader.gif" alt="Please wait..." />
     </div>
     </div>
-    <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [showFirstLastButtons]="true"></mat-paginator>
+    <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" [showFirstLastButtons]="true" [hidden] ="isStopped"></mat-paginator>
   </div>
