--- a/src/app/usercreation/usercreation.component.html
+++ b/src/app/usercreation/usercreation.component.html
@@ -42,8 +42,8 @@
                             <!-- <input matInput placeholder="Password" type="password" formControlName="Password" readonly>  -->
                             <mat-form-field class="example-full-width" >
                                 <mat-label>password</mat-label>
-                                <input matInput [type]="hide ? 'password' : 'text'">
-                                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                                <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password" formControlName="Password">
+                                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" >
                                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                                 </button>
                               </mat-form-field>     
