--- a/src/app/transferstatus/transferstatus.component.html
+++ b/src/app/transferstatus/transferstatus.component.html
@@ -1,7 +1,6 @@
 <div class="main-content page-container">
   <div class="container-fluid">
     <div class="row list-filter">
-        <div class="col-lg-1"></div>
         <div class="col-lg-3">          
           <mat-form-field >
               <mat-label>Start date</mat-label>
@@ -18,24 +17,19 @@
               <mat-datepicker #endpicker></mat-datepicker>
             </mat-form-field>
         </div>
-        <!-- <div class="col-lg-3"> 
-            <mat-form-field >
-              <mat-label>Choose a date</mat-label>
-              <input matInput [matDatepicker]="picker" [(ngModel)]="transHistoryFilter.StartDate" name="EndDate" (ngModelChange)="changeDate()">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-        </div> -->
         <div class="col-lg-3 zero-padding-right"> 
           <div class="navbar-collapse justify-content-end" id="navigation">
             <form class="navbar-form">
                 <mat-form-field>
-                  <input matInput (ngModelChange)="applyFilter()" [(ngModel)]="transHistoryFilter.Search" name="Search" placeholder="Search"/>
+                  <input matInput [(ngModel)]="transHistoryFilter.Search" name="Search" placeholder="Search"/>
                 </mat-form-field>
             </form>        
           </div>
         </div>
-        <div class="col-md-2 float-right" >
+        <div class="col-md-1.5 col-lg-1.5  float-right" >
+          <button mat-raised-button matTooltip="Search" type="button" class="btn btn-primary"  (click)="applyFilter()">Submit</button>
+        </div>
+        <div class="col-md-1.5 col-lg-1.5 float-right" >
           <button mat-raised-button matTooltip=" Click to import Excel" class="btn btn-action pull-right btn-export"  (click)="exportAsExcel()">Excel</button>
         </div>
     </div>       
@@ -126,6 +120,7 @@
     <nav aria-label="Page navigation example " class="floatr">
       <ul class="pagination">
         <li class="page-item" title="Previous" [attr.disabled]="page == 0 || ispageLoading"><a class="page-icon" (click)="pagination('previous')">&laquo;</a></li>
+        <li>{{page + 1}}</li>
         <li class="page-item" title="Next" [attr.disabled]="ispageLoading"><a class="page-icon" (click)="pagination('next')">&raquo;</a></li>
       </ul>
     </nav>
