--- a/src/styles.css
+++ b/src/styles.css
@@ -61,4 +61,6 @@ tr.mat-header-row {
 button, .pointer{
     cursor: pointer !important;
 }
-
+.btn-primary{
+    background-color: #0e7bb9 !important;
+}
