--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                 </mat-form-field>
               </div>
               <div class="align-right" >
-                <span class="col-md-8 error" *ngIf="!isValid">Enter UserName and Password</span>
+                <span class="col-md-8 error" *ngIf="!isValid">Enter Valid UserName and Password</span>
                 <input type="submit" class="btn btn-action col-md-4" value="Login" />
             </div> 
         </form> 
