--- a/src/app/imagestatus/imagestatus.component.css
+++ b/src/app/imagestatus/imagestatus.component.css
@@ -15,3 +15,29 @@
 }
 .card {margin-top: 10px !important;}
 .count{padding-top: 18px;}
+
+.card-header {
+  text-align: center;
+}
+.row{
+margin: 0;
+}
+.tab-head {
+font-size: 14px;
+color: white;
+font-weight: normal;
+}
+.mat-header-row{
+background-color: #0d7bb9;
+color: white;
+}
+.card {margin-top: 10px !important;}
+.count{padding-top: 18px;}
+
+/* .btn btn-action back-btn pull-right{
+padding-right:25px;
+} */
+
+.m-21-p{
+margin: 21%;
+}
