--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -1,7 +1,123 @@
 <div class="main-content page-container">
-    <div class="container-fluid">
-      <h1><b>Under Construction</b></h1>
+  <div class="container-fluid">
+    <div class="row list-filter">
+      <div class="col-md-2">
+        <mat-form-field>
+          <input matTooltip="Search by text"  placeholder="Search"/>
+        </mat-form-field>
+      </div>
+      <!-- <div class="col-md-2 pull-right">
+        <mat-form-field >
+          <mat-label >Job Title</mat-label>
+          <mat-select matTooltip="Select from DropDown" [(ngModel)]="roleId" name="roleId" (ngModelChange)="roleChange()"> 
+            <mat-option *ngFor="let  role of  roleList" [value]=" role.Key">
+              {{ role.Value}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div> -->
+      <div class="col-md-4"></div>
+     
     </div>
-</div>
-  
+    <div class="row" style="background-color: #fbfbfb" #TABLE>
+      <table mat-table [dataSource]="selectDataSource" #table matSort class="col-md-12">
+        
+          <!-- Id Column -->
+              <!-- <ng-container matColumnDef="Id">
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+                <td mat-cell *matCellDef="let element,let i = index"> {{i + 1}} </td>
+              </ng-container> -->
+        
+          <!-- JobId Column -->
+              <ng-container matColumnDef="JobId">
+                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Job ID </th>
+                <td mat-cell *matCellDef="let element"> {{element.JobId}} </td>
+              </ng-container> 
 
+           <!-- AccountId Column -->
+           <ng-container matColumnDef="AccountId">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> AccountId </th>
+            <td mat-cell *matCellDef="let element"> {{element.AccountId}} </td>
+          </ng-container>    
+
+          <!-- AccountType Column -->
+          <ng-container matColumnDef="AccountType">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Account Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.AccountType}} </td>
+          </ng-container>    
+        
+          <!-- ReadingDate Column -->
+          <ng-container matColumnDef="ReadingDate">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> ReadingDate </th>
+            <td mat-cell *matCellDef="let element"> {{element.ReadingDate}} </td>
+          </ng-container>    
+
+          <!-- ReadingUnit Column -->
+          <ng-container matColumnDef="ReadingUnit">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> ReadingUnit </th>
+            <td mat-cell *matCellDef="let element"> {{element.ReadingUnit}} </td>
+          </ng-container>    
+
+          <!-- HasImage Column -->
+          <ng-container matColumnDef="HasImage">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> HasImage </th>
+            <td mat-cell *matCellDef="let element"> {{element.HasImage}} </td>
+          </ng-container>  
+
+          <!-- ImageName Column -->
+          <ng-container matColumnDef="ImageName">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> ImageName </th>
+            <td mat-cell *matCellDef="let element"> {{element.ImageName}} </td>
+          </ng-container>      
+         
+          <!-- ReadingType Column -->
+          <ng-container matColumnDef="ReadingType">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> ReadingType </th>
+            <td mat-cell *matCellDef="let element"> {{element.ReadingType}} </td>
+          </ng-container>   
+           
+          <!-- Reason Column -->
+          <ng-container matColumnDef="Reason">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Reason </th>
+            <td mat-cell *matCellDef="let element"> {{element.Reason}} </td>
+          </ng-container> 
+
+           <!-- Remarks Column -->
+           <ng-container matColumnDef="Remarks">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> Remarks </th>
+            <td mat-cell *matCellDef="let element"> {{element.Remarks}} </td>
+          </ng-container> 
+            
+            <!-- ReadFlag Column -->
+           <ng-container matColumnDef="ReadFlag">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> ReadFlag </th>
+            <td mat-cell *matCellDef="let element"> {{element.ReadFlag}} </td>
+          </ng-container> 
+
+          <!-- IsApproved Column -->
+          <ng-container matColumnDef="IsApproved">
+            <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header> IsApproved </th>
+            <td mat-cell *matCellDef="let element"> {{element.IsApproved}} </td>
+          </ng-container> 
+            
+          <!-- Action ID Column -->
+          <!-- <ng-container matColumnDef="action">
+              <th class="tab-head" mat-header-cell *matHeaderCellDef style="padding-left: 35px;">Action</th>
+              <td mat-cell *matCellDef="let element">
+              <button mat-icon-button  matTooltip="Click to View the User Details" color="blue" [routerLink]="['/viewpage',element.Id,true]"  >
+                <mat-icon>visibility</mat-icon>
+              </button>
+              </td>
+              </ng-container> -->
+                
+                <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> -->
+            <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
+      </table>
+      <!-- <div style="width:450px;margin:8% auto;" *ngIf="isLoading">
+        <img src="../../assets//img//temp-loader.gif" alt="Please wait..." />
+    </div> -->
+    </div>
+    <!-- <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator> -->
+    
+  </div>
+</div>
