--- a/src/app/readings/readings.component.css
+++ b/src/app/readings/readings.component.css
@@ -1,4 +1,44 @@
-.container-fluid{
-padding-top: 20%;
-text-align: center;
-}
+table {
+    width: 100%;
+  }
+  .row{
+    margin: 0;
+  }
+  .mat-header-row{
+    background-color: #0d7bb9;
+  }
+  .form-bg-color
+  {
+      background-color:#e5e5e5;
+  }
+  
+  .align-right
+  {
+    text-align: right;
+  }
+  .tab-head {
+  
+    color: white;
+    font-weight: normal;
+    font-size: 14px;
+   
+  }
+  .zero-padding-right
+  {
+    padding-right:0;
+  }
+  .card {
+    margin-top: 10px !important;
+  }
+  .page-icon{
+    padding: 6px 20px;
+    font-size: 40px;
+    cursor: pointer;
+  }
+  .page-item:hover{
+    background-color: lightgray;
+  }
+  .floatr{
+    float:right !important;
+    margin-top: 10px;
+  }
