--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -1,32 +1,11 @@
 <div class="main-content page-container">
   <div class="container-fluid">
     <div class="row list-filter">
-      <div class="col-md-2">
-        <mat-form-field>
-          <input matTooltip="Search by text"  placeholder="Search"/>
-        </mat-form-field>
-      </div>
-      <!-- <div class="col-md-2 pull-right">
-        <mat-form-field >
-          <mat-label >Job Title</mat-label>
-          <mat-select matTooltip="Select from DropDown" [(ngModel)]="roleId" name="roleId" (ngModelChange)="roleChange()"> 
-            <mat-option *ngFor="let  role of  roleList" [value]=" role.Key">
-              {{ role.Value}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div> -->
+      <div class="col-md-2"></div>
       <div class="col-md-4"></div>
-     
     </div>
-    <div class="row" style="background-color: #fbfbfb" #TABLE>
-      <table mat-table [dataSource]="selectDataSource" #table matSort class="col-md-12">
-        
-          <!-- Id Column -->
-              <!-- <ng-container matColumnDef="Id">
-                <th class="tab-head" mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-                <td mat-cell *matCellDef="let element,let i = index"> {{i + 1}} </td>
-              </ng-container> -->
+    <div class="row" style="background-color: #fbfbfb">
+      <table mat-table [dataSource]="dataSource" class="col-md-12">
         
           <!-- JobId Column -->
               <ng-container matColumnDef="JobId">
@@ -113,11 +92,9 @@
                 <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> -->
             <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
       </table>
-      <!-- <div style="width:450px;margin:8% auto;" *ngIf="isLoading">
+      <div style="width:450px;margin:8% auto;" *ngIf="isLoading">
         <img src="../../assets//img//temp-loader.gif" alt="Please wait..." />
-    </div> -->
     </div>
-    <!-- <mat-paginator #TableOnePaginator="matPaginator" [pageSize]="10" ></mat-paginator> -->
-    
+    </div>
   </div>
 </div>
