--- a/src/app/readings/readings.component.html
+++ b/src/app/readings/readings.component.html
@@ -20,7 +20,7 @@
      
     </div>
     <div class="row" style="background-color: #fbfbfb" #TABLE>
-      <table mat-table [dataSource]="selectDataSource" #table matSort class="col-md-12">
+      <table mat-table [dataSource]="selectedDataSource" #table matSort class="col-md-12">
         
           <!-- Id Column -->
               <!-- <ng-container matColumnDef="Id">
